添加图片验证码－修改密码页面

--- a/src/common/resources/sass/_form.scss
+++ b/src/common/resources/sass/_form.scss
@@ -24,8 +24,8 @@
     }
 
     .form-content-row {
-        margin: 0 0 5px 0;
-        padding: 5px 0;
+        margin: 0 0 3px 0;
+        padding: 3px 0 6px;
         background: superfine-border-bottom($line-color);
     }
 
@@ -70,6 +70,27 @@
         }
     }
 
+    .image-verity-code {
+        display: block;
+        width: 70px;
+        height: 28px;
+        margin: 2px 5px 2px;
+    }
+
+    .form-image-code {
+        position: relative;
+
+        &:before {
+            position: absolute;
+            left: 0;
+            top: 8px;
+            width: 1px;
+            height: 18px;
+            background: superfine-border-left($line-color);
+            content: '';
+        }
+    }
+
     .form-code {
         position: relative;
 
@@ -84,6 +105,9 @@
         }
 
         .button {
+            height: 32px;
+            min-height: 32px;
+            line-height: 32px;
             font-size: 14px;
             color: $positive;
         }
