--- a/src/common/templates/wechatBindMobile.html
+++ b/src/common/templates/wechatBindMobile.html
@@ -19,7 +19,7 @@
                     <div class="col row-input col-center">
                         <input type="text" placeholder="请输入需要绑定的手机号"
                             name="mobile" ng-model="wechatBindMobile.mobile"
-                            ng-minlength="11" ng-maxlength="11" 
+                            ng-minlength="11" maxlength="11" 
                             required />
                     </div>
                 </div>
@@ -41,6 +41,17 @@
                 </div>
                 <div class="form-content-row row">
                     <div class="col row-input col-center">
+                        <input type="text" placeholder="请输入图片验证码"
+                           name="imageVerifyCode" ng-model="wechatBindMobile.imageVerifyCode"
+                           required />
+                    </div>
+                    <div class="col col-adaptive form-image-code">
+                        <img class="image-verity-code" ng-src="{{wechatBindMobile.imageVerifyCodeUrl}}"
+                            ng-click="wechatBindMobile.getImageVerifyCodeUrl()" />
+                    </div>
+                </div>
+                <div class="form-content-row row">
+                    <div class="col row-input col-center">
                         <input type="text" placeholder="请输入验证码"
                            name="smsVerifyCode" ng-model="wechatBindMobile.smsVerifyCode"
                            ng-minlength="6" maxlength="6" 
@@ -48,7 +59,7 @@
                     </div>
                     <div class="col col-adaptive form-code">
                         <button type="button" class="button button-clear"
-                            ng-disabled="wechatBindMobile.timeDown != undefined || form.loginName.$invalid"
+                            ng-disabled="wechatBindMobile.timeDown != undefined || form.mobile.$invalid"
                             ng-click="wechatBindMobile.sendSMSVerifyCode()">
                             {{wechatBindMobile.sendVerifyCodeText}}
                             <b class="time-down" ng-if="wechatBindMobile.timeDown != undefined">
