--- a/src/common/templates/modals/register.html
+++ b/src/common/templates/modals/register.html
@@ -24,6 +24,17 @@
                 </div>
                 <div class="form-content-row row">
                     <div class="col row-input col-center">
+                        <input type="text" placeholder="请输入图片验证码"
+                           name="imageVerifyCode" ng-model="register.imageVerifyCode"
+                           required />
+                    </div>
+                    <div class="col col-adaptive form-image-code">
+                        <img class="image-verity-code" ng-src="{{register.imageVerifyCodeUrl}}"
+                            ng-click="register.getImageVerifyCodeUrl()" />
+                    </div>
+                </div>
+                <div class="form-content-row row">
+                    <div class="col row-input col-center">
                         <input type="text" placeholder="请输入验证码"
                            name="smsVerifyCode" ng-model="register.smsVerifyCode"
                            ng-minlength="6" maxlength="6" 
