--- a/src/common/templates/userAccount.html
+++ b/src/common/templates/userAccount.html
@@ -31,7 +31,7 @@
                 </div>
 
                 <div class="account-recharge">
-                    <div class="recharge-title">充值金额（人民币）</div>
+                    <div class="recharge-title">充值<span>（人民币）</span></div>
                     <ul class="recharge-list clearfix">
                         <li class="recharge-item" ng-repeat="product in account.products">
                             <div class="recharge-text" ng-class="{'active': product.active}" 
