修改文本内容，“军转培训”改为“考研培训”

--- a/src/common/templates/index.html
+++ b/src/common/templates/index.html
@@ -40,7 +40,7 @@
                 <div class="item-icon">
                     <i class="iconfont icon-junzhuanpeixun"></i>
                 </div>
-                <div class="item-text">军转培训</div>
+                <div class="item-text">考研培训</div>
             </div>
             <div class="sort-item item-4 col" ng-click="index.goCategoryList(3)">
                 <div class="item-icon">
