--- a/src/common/templates/userAccount.html
+++ b/src/common/templates/userAccount.html
@@ -69,7 +69,7 @@
             <div class="account-tips">
                 <p>1. 用App Store绑定支付宝、微信或者银行卡可以直接在“半月谈”进行充值购买商品。</p>
                 <p>2. 虚拟产品必须通过苹果系统支付购买，苹果与非苹果设备余额不能互相通用。</p>
-                <p>3. 充值如遇问题，请关注“半月谈时政APP”微信公众号，我们会为你解决。</p>
+                <p>3. 充值如遇问题，请关注“半月谈教育服务号”微信公众号，我们会为你解决。</p>
             </div>
 
         </div>
